--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,6 @@
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
-    <script>console.log('root index.html')</script>
+    <script>console.log('public index.html')</script>
   </body>
 </html>
